--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22",
-    "openai": "^3.3.0"
+    "nodemon": "^3.0.1",
+    "openai": "^3.3.0",
+    "prettier": "^3.0.0"
   }
 }
